--- a/src/style.scss
+++ b/src/style.scss
@@ -5,8 +5,20 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-boilerplate {
+.wp-block-custsom-block-text-box {
 	background-color: #21759b;
 	color: #fff;
 	padding: 2px;
+
+	&.text-box-align-right {
+		text-align: right;
+	}
+
+	&.text-box-align-center {
+		text-align: center;
+	}
+
+	&.text-box-align-left {
+		text-align: left;
+	}
 }
